<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="about_all_right_reserved">All Right Reserved</string>
    <string name="about_facebook">Facebook</string>
    <string name="about_follow_us">Follow us</string>
    <string name="about_gongzhonghao">WeChat Official Account</string>
    <string name="about_gongzhopnghao_num">kingroot2014</string>
    <string name="about_gzh_copy_toast">WeChat Official Account has been copied into clipboard</string>
    <string name="about_kernel_ver">Su version v%1$s</string>
    <string name="about_qqgroup1">QQ group 1</string>
    <string name="about_qqgroup2">QQ group 2</string>
    <string name="about_qqgroup_copy_toast">QQ number has been copied to the clipboard</string>
    <string name="about_qqgroup_num1">190268533</string>
    <string name="about_qqgroup_num2">206734529</string>
    <string name="about_sina_weibo">Weibo</string>
    <string name="about_sina_weibo_account">\@kingrootteam</string>
    <string name="about_thanks">Thanks</string>
    <string name="advance_perm_app_detail_title">Permission</string>
    <string name="advance_perm_app_list_desc">%1$d permissions</string>
    <string name="advance_perm_app_list_risk_text">Risk</string>
    <string name="advance_perm_app_list_sys_title">System (%1$d)</string>
    <string name="advance_perm_app_list_title">App list</string>
    <string name="advance_perm_app_list_user_title">Personal (%1$d)</string>
    <string name="advance_perm_click_to_root">Get Root</string>
    <string name="advance_perm_detail_page_list_item_rootauth">Using Root Auth</string>
    <string name="advance_perm_detail_page_list_item_silentinstall">Silent install</string>
    <string name="advance_perm_detail_page_title_appsize">Size: %1$s</string>
    <string name="advance_perm_detail_page_title_installtime">Time: %1$s</string>
    <string name="advance_perm_detail_page_title_version">Version: %1$s</string>
    <string name="advance_perm_main_page_click_fixed_root">Gain Root to enable</string>
    <string name="advance_perm_main_page_desc_autoboot_disable">%1$d blocked</string>
    <string name="advance_perm_main_page_desc_autoboot_enable">%1$d allowed</string>
    <string name="advance_perm_main_page_desc_normal">Monitoring %1$d apps></string>
    <string name="advance_perm_main_page_desc_rootauth_allow">%1$d permitted</string>
    <string name="advance_perm_main_page_desc_rootauth_ask">%1$d prompt</string>
    <string name="advance_perm_main_page_desc_rootauth_deny">%1$d banned</string>
    <string name="advance_perm_main_page_desc_rootauth_risk_deny">%1$d risks banned</string>
    <string name="advance_perm_main_page_desc_silentinstall">%1$d blocked</string>
    <string name="advance_perm_main_page_desc_silentinstall_none">No silent install detected</string>
    <string name="advance_perm_main_page_desc_warning">Monitoring advanced permissions</string>
    <string name="advance_perm_main_page_root_exception">Feature not available without Root permission</string>
    <string name="advance_perm_main_page_title">Advanced Permissions</string>
    <string name="advance_perm_main_page_title_autoboot">Autostart Monitor</string>
    <string name="advance_perm_main_page_title_rootauth">Root Authorization</string>
    <string name="advance_perm_main_page_title_silentinstall">Silent Install Block</string>
    <string name="advance_perm_module_has_been_disabled">No Root permission, feature unavailable</string>
    <string name="advance_perm_root_unroot_auth_sub_title">Authorize Root to other apps</string>
    <string name="advance_perm_root_unroot_auth_title">Root Permissions</string>
    <string name="advance_perm_root_unroot_auto_sub_title">Stop apps secretly running</string>
    <string name="advance_perm_root_unroot_auto_title">Autostart Monitor</string>
    <string name="advance_perm_root_unroot_slient_install_sub_title">Block unauthorized silent installation</string>
    <string name="anti_about_page_content_1">Super protection based on Root:</string>
    <string name="anti_about_page_content_2">1. Root safe protection can prevent malware hijacking your keyboard or stealing your information, make your payment behavior safer than before</string>
    <string name="anti_about_page_content_3">2. Root safe protection can enhance safety and stability of personal apps, prevent them from attacking</string>
    <string name="anti_about_page_title">About</string>
    <string name="anti_defend_high_risk_count">Stopped %1$d risk behaviour(s) recently ></string>
    <string name="anti_guide_reboot_progress_dialog_text">Rebooting…</string>
    <string name="anti_inject_add_app">Add</string>
    <string name="anti_inject_add_protect">OK</string>
    <string name="anti_inject_feature1_desrc">Enhance Root core, active protecting system</string>
    <string name="anti_inject_feature1_title">Root defence engine</string>
    <string name="anti_inject_feature2_desrc">Protecting systems against malicious hijacking and information Leakage</string>
    <string name="anti_inject_feature2_title">Hijacking protection</string>
    <string name="anti_inject_feature3_desrc">Add app into list, more stable and safer than before</string>
    <string name="anti_inject_feature3_title">Exclusive protecting module</string>
    <string name="anti_inject_log_empty">No records</string>
    <string name="anti_inject_log_page_title">Interception records</string>
    <string name="anti_inject_menu_about">About</string>
    <string name="anti_inject_menu_list">Protected list</string>
    <string name="anti_inject_menu_stop_engine">Disable</string>
    <string name="anti_inject_no_list">Apps in list are highly protected</string>
    <string name="anti_inject_open_fail_toast">Root safe protection enable failed</string>
    <string name="anti_inject_open_success_toast">Root safe protection enable success</string>
    <string name="anti_inject_page_title">Super protection</string>
    <string name="anti_inject_stop_engine_dialog_confirm">OK</string>
    <string name="anti_inject_stop_engine_dialog_content">Disabling will increase risk of system hijacking. Continue anyway?</string>
    <string name="anti_inject_stop_engine_dialog_dimiss">Cancel</string>
    <string name="anti_inject_stop_engine_dialog_title">Disable Root defence</string>
    <string name="anti_log_hijack_system">hijacking system</string>
    <string name="anti_log_modify_software">tampering apps</string>
    <string name="anti_log_modify_system">tampering system</string>
    <string name="anti_log_notify_btn">View details</string>
    <string name="anti_log_notify_msg_title">Blocked %1d high-risk behaviors</string>
    <string name="anti_log_prevent_hijack_system_success">To prevent system from hijacking successfully</string>
    <string name="anti_log_prevent_modify_software_success">To prevent apps from tampering successfully=</string>
    <string name="anti_log_prevent_modify_system_success">To prevent system from tampering successfully</string>
    <string name="anti_log_prevent_success">Prevent</string>
    <string name="anti_open_fail_dialog_confirm">Retry</string>
    <string name="anti_open_fail_dialog_content">Oops, Error happened during enabling, we will fix this problem soon</string>
    <string name="anti_open_fail_dialog_dimiss">Got it</string>
    <string name="anti_open_fail_dialog_title">Failed to enable super protection</string>
    <string name="anti_open_fail_guide_reboot_content">System core file be tampered, fix can be done after reboot</string>
    <string name="anti_open_guide_reboot_confirm">Reboot</string>
    <string name="anti_open_guide_reboot_dismiss">Cancel</string>
    <string name="anti_open_guide_reboot_title">Root safe protection prompt</string>
    <string name="anti_open_success_guide_reboot_content">All risks are fixed, please reboot your device</string>
    <string name="anti_opened_monitoring">Under control ></string>
    <string name="attribute_content_description_image">Image</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="image">image</string>
    <string name="kr4_follow">Follow KingRoot Team to get the latest info.</string>
    <string name="notify_ku_installed_success_content_format">Tap to use KingRoot%1$s</string>
    <string name="notify_ku_installed_success_title">New KingRoot, safer than ever!</string>
    <string name="repackage_warning_dangerous">Severe risk warning</string>
    <string name="repackage_warning_tip">Authorization manager has been tampered and failed to authorize safely, the system is in danger.</string>
    <string name="root_again">Root again</string>
    <string name="security_protect_about_desc_1">"Kingroot developed a kernel safeguard to enhance system security level and effectively defend against viruses and hackers' attacks"</string>
    <string name="security_protect_about_desc_2">KingRoot provides exclusive safeguard modules to strengthen the stability and security of personal apps, and prevent them from targeted attacks which may cause private info leaks and data loss.</string>
    <string name="security_protect_about_main_title">"System security
reinforcement"</string>
    <string name="security_protect_about_sub_title1">Intercept strong attacks</string>
    <string name="security_protect_about_sub_title2">Improve apps stability</string>
    <string name="silent_install_main_page_main_title">%1$d</string>
    <string name="silent_install_main_page_main_title_no_app">Silent install under control</string>
    <string name="silent_install_main_page_main_title_suffix">times</string>
    <string name="silent_install_main_page_starting_tips">Setting up…</string>
    <string name="silent_install_main_page_sub_tile">Recent silent install</string>
    <string name="silent_install_main_page_sub_title_no_app">No silent install detected</string>
    <string name="subscribe_wx_account">Subscribe</string>
    <string name="uninstall_app_data_size">Size(data):</string>
    <string name="uninstall_app_size_tag">Size(app):</string>
    <string name="uninstall_app_source_dir">apk:</string>
    <string name="uninstall_app_type_tag">Type:</string>
    <string name="uninstall_app_update_tag">Update time:</string>
    <string name="uninstall_app_version_tag">Version:</string>
    <string name="uninstall_checkbox_nomore_tips">No prompt</string>
    <string name="uninstall_promptbox_warning_tips">Removing system apps may cause system unstable, please proceed with caution</string>
    <string name="uninstall_warning_tips">Removing will cause system error, proceed with caution please</string>
    <string name="security_protect_cve_card_title_unit">flaws</string>
    <string name="urlcheck_risk_page_all_intercept">One-touch block</string>
    <string name="urlcheck_risk_page_all_trust">Trust all</string>
    <string name="urlcheck_risk_page_handled_tips">High-risk URLs have been processed</string>
    <string name="urlcheck_risk_page_sub_title">High-risk URLs to be processed</string>
</resources>