<?xml version="1.0" encoding="utf-8"?>
<LinearLayout style="@style/new_dialog_global_style"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/new_dialog_line_margin" android:layout_marginBottom="@dimen/new_dialog_line_margin" android:src="@drawable/new_dialog_dialog_warning" />
    <ScrollView android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/new_dialog_line_margin" android:layout_marginRight="@dimen/new_dialog_line_margin">
            <TextView android:textStyle="normal" android:id="@id/item_content" android:minWidth="360.0dip" android:text="@string/uninstall_promptbox_warning_tips" android:lineSpacingMultiplier="1.2" style="@style/new_dialog_main_text_style" />
        </LinearLayout>
    </ScrollView>
    <RelativeLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/new_dialog_line_margin" android:layout_marginTop="@dimen/new_dialog_bound_margin">
        <CheckBox android:id="@id/prompt_checkbox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/dialog_tile_icon_marginRight_km" android:button="@drawable/checkbox_square_selector" android:layout_alignParentLeft="true" android:layout_centerVertical="true" />
        <TextView android:gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/uninstall_checkbox_nomore_tips" android:layout_toRightOf="@id/prompt_checkbox" android:layout_centerVertical="true" style="@style/text_secondary_style_km" />
    </RelativeLayout>
    <LinearLayout android:id="@id/linearLayoutButtons" style="@style/new_dialog_btn_layout_style">
        <Button android:id="@id/button_left" android:text="@string/dialog_btn_cancel" style="@style/new_dialog_btn_style" />
        <ImageView android:id="@id/button_line" android:background="@null" android:layout_width="@dimen/new_dialog_bound_margin" android:layout_height="fill_parent" android:contentDescription="@string/image" />
        <Button android:id="@id/button_right" android:text="@string/dialog_btn_ok" style="@style/new_dialog_btn_style" />
    </LinearLayout>
</LinearLayout>