<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/general_light_bg" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:background="@color/green_0" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4.0dip" android:src="@drawable/about_anti_inject_iv_1" />
            <TextView android:textSize="@dimen/text_title_size" android:textColor="@color/white" android:gravity="center_horizontal" android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginBottom="32.0dip" android:text="@string/security_protect_about_main_title" android:lineSpacingMultiplier="1.2" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="32.0dip" android:layout_marginRight="32.0dip">
            <TextView android:textSize="16.0sp" android:textColor="@color/black_1" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/security_protect_about_sub_title1" />
            <TextView android:textSize="13.0sp" android:textColor="@color/blue_2" android:gravity="left" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/security_protect_about_desc_1" android:lineSpacingMultiplier="1.2" />
            <TextView android:textSize="16.0sp" android:textColor="@color/black_1" android:layout_gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/security_protect_about_sub_title2" />
            <TextView android:textSize="13.0sp" android:textColor="@color/blue_2" android:gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/security_protect_about_desc_2" android:lineSpacingMultiplier="1.2" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>