<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/top_panel" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="210.0dip">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_alignParentTop="true">
            <LinearLayout android:gravity="center_horizontal" android:id="@id/main_text_panel" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_1" android:textColor="@color/black_1" android:id="@id/main_text_with_record_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/silent_install_main_page_main_title" />
                <TextView android:textSize="32.0sp" android:textColor="@color/black_1" android:id="@id/main_text_with_record_suffix" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/security_protect_cve_card_title_unit" />
            </LinearLayout>
            <TextView android:textSize="@dimen/text_size_4" android:textColor="@color/blue_2" android:id="@id/sub_text_with_record" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/urlcheck_risk_page_sub_title" />
        </LinearLayout>
    </RelativeLayout>
    <android.support.v7.widget.RecyclerView android:id="@id/risk_log_list_view" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_marginLeft="4.0dip" android:layout_marginRight="4.0dip" android:layout_weight="1.0" />
    <RelativeLayout android:gravity="center_vertical" android:id="@id/open_btn_layout" android:layout_width="fill_parent" android:layout_height="@dimen/list_footer_bar_height" android:layout_marginTop="4.0dip">
        <Button android:id="@id/all_intercept_btn" android:layout_width="150.0dip" android:layout_height="48.0dip" android:layout_marginLeft="@dimen/uninstall_margin" android:text="@string/urlcheck_risk_page_all_intercept" android:layout_alignParentLeft="true" style="@style/root_blue_shadow_button_style" />
        <Button android:id="@id/all_trust_btn" android:layout_width="150.0dip" android:layout_height="48.0dip" android:layout_marginRight="@dimen/uninstall_margin" android:text="@string/urlcheck_risk_page_all_trust" android:layout_alignParentRight="true" style="@style/root_white_shadow_button_style" />
    </RelativeLayout>
    <RelativeLayout android:id="@id/handled_tips_panel" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/silent_install_main_done_icon" />
            <TextView android:textSize="@dimen/text_size_2" android:textColor="@color/black_1" android:id="@id/main_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/urlcheck_risk_page_handled_tips" />
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>