<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="fill_parent" android:layout_height="210.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <RelativeLayout android:id="@id/top_panel" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_centerInParent="true">
            <ImageView android:id="@id/main_image" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/silent_install_main_disable_icon" android:scaleType="center" />
            <TextView android:textSize="@dimen/text_size_2" android:textColor="@color/black_1" android:id="@id/main_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/silent_install_main_page_main_title_no_app" />
            <TextView android:textSize="@dimen/text_size_4" android:textColor="@color/blue_2" android:id="@id/sub_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/silent_install_main_page_sub_title_no_app" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@id/top_panel_animation" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_alignParentTop="true">
            <LinearLayout android:gravity="center_horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_1" android:textColor="@color/black_1" android:id="@id/main_text_anim" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0" />
                <TextView android:textSize="32.0sp" android:textColor="@color/black_1" android:id="@id/main_text_suffix_anim" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="%" />
            </LinearLayout>
            <TextView android:textSize="@dimen/text_size_2" android:textColor="@color/black_1" android:id="@id/sub_text_anim" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/silent_install_main_page_starting_tips" />
        </LinearLayout>
    </RelativeLayout>
    <RelativeLayout android:id="@id/top_panel_with_record" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_alignParentTop="true">
            <LinearLayout android:gravity="center_horizontal" android:id="@id/main_text_panel" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/text_size_1" android:textColor="@color/black_1" android:id="@id/main_text_with_record_count" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/silent_install_main_page_main_title" />
                <TextView android:textSize="32.0sp" android:textColor="@color/black_1" android:id="@id/main_text_with_record_suffix" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/silent_install_main_page_main_title_suffix" />
            </LinearLayout>
            <TextView android:textSize="@dimen/text_size_4" android:textColor="@color/blue_2" android:id="@id/sub_text_with_record" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/silent_install_main_page_sub_tile" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>